namespace Bannerlord.UIExtenderEx.Prefabs2
{
    /// <summary>
    /// General interface for XML prefab patch
    /// </summary>
    public interface IPrefabPatch { }
}